[gd_scene load_steps=23 format=3 uid="uid://whyctvtybism"]

[ext_resource type="PackedScene" uid="uid://daoms8iwq7ewn" path="res://scenes/ui/clue.tscn" id="1_2mliy"]
[ext_resource type="Script" uid="uid://wy2ee1ombthj" path="res://scenes/ui/clue_manager.gd" id="1_k84of"]
[ext_resource type="Texture2D" uid="uid://rgj05gqldm4p" path="res://assets/ui/icons_0001.png" id="2_3fxgw"]
[ext_resource type="Shader" uid="uid://danmqkqigi3ds" path="res://shaders/highlight1.gdshader" id="3_61vau"]
[ext_resource type="Texture2D" uid="uid://b2am8fwvruqbu" path="res://assets/hints/justshy.png" id="3_kp1rv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f21fn"]
shader = ExtResource("3_61vau")
shader_parameter/maxLineWidth = 29.0
shader_parameter/minLineWidth = 7.5
shader_parameter/speed = 3.0
shader_parameter/blockSize = 33.0
shader_parameter/color = Color(0.54605, 0.177634, 0.809336, 1)
shader_parameter/tolerance = 0.714
shader_parameter/show = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3fxgw"]
resource_local_to_scene = true
shader = ExtResource("3_61vau")
shader_parameter/maxLineWidth = 55.0
shader_parameter/minLineWidth = 35.05
shader_parameter/speed = 6.875
shader_parameter/blockSize = 57.235
shader_parameter/color = Color(0.161, 0.02, 0.259, 1)
shader_parameter/tolerance = 0.999
shader_parameter/show = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_iixjv"]
resource_local_to_scene = true
shader = ExtResource("3_61vau")
shader_parameter/maxLineWidth = 55.0
shader_parameter/minLineWidth = 35.05
shader_parameter/speed = 6.875
shader_parameter/blockSize = 57.235
shader_parameter/color = Color(0.161, 0.02, 0.259, 1)
shader_parameter/tolerance = 0.999
shader_parameter/show = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yjyec"]
resource_local_to_scene = true
shader = ExtResource("3_61vau")
shader_parameter/maxLineWidth = 55.0
shader_parameter/minLineWidth = 35.05
shader_parameter/speed = 6.875
shader_parameter/blockSize = 57.235
shader_parameter/color = Color(0.161, 0.02, 0.259, 1)
shader_parameter/tolerance = 0.999
shader_parameter/show = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ymd42"]
resource_local_to_scene = true
shader = ExtResource("3_61vau")
shader_parameter/maxLineWidth = 55.0
shader_parameter/minLineWidth = 35.05
shader_parameter/speed = 6.875
shader_parameter/blockSize = 57.235
shader_parameter/color = Color(0.161, 0.02, 0.259, 1)
shader_parameter/tolerance = 0.999
shader_parameter/show = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6hcw4"]
resource_local_to_scene = true
shader = ExtResource("3_61vau")
shader_parameter/maxLineWidth = 55.0
shader_parameter/minLineWidth = 35.05
shader_parameter/speed = 6.875
shader_parameter/blockSize = 57.235
shader_parameter/color = Color(0.161, 0.02, 0.259, 1)
shader_parameter/tolerance = 0.999
shader_parameter/show = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m5u1w"]
resource_local_to_scene = true
shader = ExtResource("3_61vau")
shader_parameter/maxLineWidth = 55.0
shader_parameter/minLineWidth = 35.05
shader_parameter/speed = 6.875
shader_parameter/blockSize = 57.235
shader_parameter/color = Color(0.161, 0.02, 0.259, 1)
shader_parameter/tolerance = 0.999
shader_parameter/show = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xib1g"]
resource_local_to_scene = true
shader = ExtResource("3_61vau")
shader_parameter/maxLineWidth = 55.0
shader_parameter/minLineWidth = 35.05
shader_parameter/speed = 6.875
shader_parameter/blockSize = 57.235
shader_parameter/color = Color(0.161, 0.02, 0.259, 1)
shader_parameter/tolerance = 0.999
shader_parameter/show = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c4erm"]
resource_local_to_scene = true
shader = ExtResource("3_61vau")
shader_parameter/maxLineWidth = 55.0
shader_parameter/minLineWidth = 35.05
shader_parameter/speed = 6.875
shader_parameter/blockSize = 57.235
shader_parameter/color = Color(0.161, 0.02, 0.259, 1)
shader_parameter/tolerance = 0.999
shader_parameter/show = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5f3qm"]
resource_local_to_scene = true
shader = ExtResource("3_61vau")
shader_parameter/maxLineWidth = 55.0
shader_parameter/minLineWidth = 35.05
shader_parameter/speed = 6.875
shader_parameter/blockSize = 57.235
shader_parameter/color = Color(0.161, 0.02, 0.259, 1)
shader_parameter/tolerance = 0.999
shader_parameter/show = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qt31r"]
resource_local_to_scene = true
shader = ExtResource("3_61vau")
shader_parameter/maxLineWidth = 55.0
shader_parameter/minLineWidth = 35.05
shader_parameter/speed = 6.875
shader_parameter/blockSize = 57.235
shader_parameter/color = Color(0.161, 0.02, 0.259, 1)
shader_parameter/tolerance = 0.999
shader_parameter/show = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rp763"]
resource_local_to_scene = true
shader = ExtResource("3_61vau")
shader_parameter/maxLineWidth = 55.0
shader_parameter/minLineWidth = 35.05
shader_parameter/speed = 6.875
shader_parameter/blockSize = 57.235
shader_parameter/color = Color(0.161, 0.02, 0.259, 1)
shader_parameter/tolerance = 0.999
shader_parameter/show = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mr770"]
resource_local_to_scene = true
shader = ExtResource("3_61vau")
shader_parameter/maxLineWidth = 55.0
shader_parameter/minLineWidth = 35.05
shader_parameter/speed = 6.875
shader_parameter/blockSize = 57.235
shader_parameter/color = Color(0.161, 0.02, 0.259, 1)
shader_parameter/tolerance = 0.999
shader_parameter/show = false

[sub_resource type="LabelSettings" id="LabelSettings_kp1rv"]
font_size = 23

[sub_resource type="Animation" id="Animation_3fxgw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NinePatchRect:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(731.2, 169.6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NinePatchRect:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("NinePatchRect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_61vau"]
resource_name = "open_desc"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("NinePatchRect:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667, 1.06667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(731.2, 169.6), Vector2(731.2, 169.6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NinePatchRect:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("NinePatchRect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iixjv"]
_data = {
&"RESET": SubResource("Animation_3fxgw"),
&"open_desc": SubResource("Animation_61vau")
}

[node name="CluesUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_k84of")

[node name="OpenButton" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(120, 70)
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -164.0
offset_top = 25.0
offset_right = -25.0
offset_bottom = 167.0
grow_horizontal = 0

[node name="Label" type="Label" parent="OpenButton"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Clues"

[node name="TextureRect" type="TextureRect" parent="OpenButton"]
material = SubResource("ShaderMaterial_f21fn")
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_right = 2.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("2_3fxgw")
expand_mode = 3
stretch_mode = 5

[node name="GridContainer" type="GridContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 5

[node name="Clue" parent="GridContainer" instance=ExtResource("1_2mliy")]
material = SubResource("ShaderMaterial_3fxgw")
layout_mode = 2

[node name="Clue2" parent="GridContainer" instance=ExtResource("1_2mliy")]
material = SubResource("ShaderMaterial_iixjv")
layout_mode = 2

[node name="Clue3" parent="GridContainer" instance=ExtResource("1_2mliy")]
material = SubResource("ShaderMaterial_yjyec")
layout_mode = 2

[node name="Clue4" parent="GridContainer" instance=ExtResource("1_2mliy")]
material = SubResource("ShaderMaterial_ymd42")
layout_mode = 2

[node name="Clue5" parent="GridContainer" instance=ExtResource("1_2mliy")]
material = SubResource("ShaderMaterial_6hcw4")
layout_mode = 2

[node name="Clue6" parent="GridContainer" instance=ExtResource("1_2mliy")]
material = SubResource("ShaderMaterial_m5u1w")
layout_mode = 2

[node name="Clue7" parent="GridContainer" instance=ExtResource("1_2mliy")]
material = SubResource("ShaderMaterial_xib1g")
layout_mode = 2

[node name="Clue8" parent="GridContainer" instance=ExtResource("1_2mliy")]
material = SubResource("ShaderMaterial_c4erm")
layout_mode = 2

[node name="Clue9" parent="GridContainer" instance=ExtResource("1_2mliy")]
material = SubResource("ShaderMaterial_5f3qm")
layout_mode = 2

[node name="Clue10" parent="GridContainer" instance=ExtResource("1_2mliy")]
material = SubResource("ShaderMaterial_qt31r")
layout_mode = 2

[node name="Clue11" parent="GridContainer" instance=ExtResource("1_2mliy")]
material = SubResource("ShaderMaterial_rp763")
layout_mode = 2

[node name="Clue12" parent="GridContainer" instance=ExtResource("1_2mliy")]
material = SubResource("ShaderMaterial_mr770")
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.4
anchor_right = 0.8
anchor_bottom = 0.6
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(365.6, 84.8)

[node name="ColorRect" type="ColorRect" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.188234, 0.000192619, 0.552034, 1)

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 28
theme_override_constants/margin_top = 14
theme_override_constants/margin_right = 28
theme_override_constants/margin_bottom = 14

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="ClueName" type="Label" parent="NinePatchRect/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Clue Name"
label_settings = SubResource("LabelSettings_kp1rv")

[node name="ClueDescription" type="Label" parent="NinePatchRect/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(18.465, 26.405)
layout_mode = 2
text = "Clue Description"
autowrap_mode = 3

[node name="ClueVisual" type="TextureRect" parent="NinePatchRect/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_kp1rv")
expand_mode = 3

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = -1000
theme_override_constants/margin_top = -1000
theme_override_constants/margin_right = -1000
theme_override_constants/margin_bottom = -1000

[node name="ClearDescButton" type="Button" parent="NinePatchRect/MarginContainer2"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_iixjv")
}

[connection signal="button_up" from="OpenButton" to="." method="_on_open_button_button_up"]
[connection signal="mouse_entered" from="OpenButton" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="OpenButton" to="." method="_on_button_mouse_exited"]
[connection signal="button_up" from="NinePatchRect/MarginContainer2/ClearDescButton" to="." method="_on_clear_desc_button_button_up"]
